--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -5,7 +5,7 @@ env:
   GO_VERSION: "^1.19"
   GOLANGCI_LINT_VERSION: "v1.50.1"
   REGISTRY: registry.uw.systems
-  IMAGE_NAME: "utilitywarehouse/onboarding-lfell" #REF1
+  IMAGE_NAME: "onboarding-lfell" #REF1
 
 jobs:
   test:
@@ -46,5 +46,5 @@ jobs:
             SERVICE=${{ env.IMAGE_NAME }}
             GITHUB_TOKEN=${{ secrets.DEPLOY_GITHUB_TOKEN }}
             GITHUB_USER=${{ secrets.DEPLOY_GITHUB_USER }}
-          tags: ${{ env.REGISTRY }}/onboarding/${{ env.IMAGE_NAME }}:${{ github.sha }},${{ env.REGISTRY }}/onboarding/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.REGISTRY }}/onboarding/${{ env.IMAGE_NAME }}:${{ github.sha }},${{ env.REGISTRY }}/onboarding/${{ env.IMAGE_NAME }}
           push: true
